--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Software Developer with more than ten years of experience in integrating, designing, developing and implementing web application solutions. 
+                        Software Developer with more than 5 years of experience in integrating, designing, developing and implementing web application solutions. 
                         Proven ability to manage all phases of software development life cycle from requirements analysis to application deployment. 
                         Skilled in React, Azure, Express.js, npm, node.JS, web API, MVC, .Net core, Entity Framework, C#, .NET, T-SQL and Mongo with database analysis and design.
                     </p>
