--- a/index.html
+++ b/index.html
@@ -205,17 +205,16 @@
         <ul>
             <li>JavaScript</li>
             <li>Python</li>
-            <li>Node.js</li>
-            <li>Express.Js</li>
-            <li>React</li>
             <li>C#</li>
             <li>C++</li>
             <li>.Net</li>
-            <li>JavaScript</li>
-            <li>Python</li>
+            <li>React</li>
+            <li>Node.js</li>
+            <li>Express.Js</li>
             <li>MySql</li>
             <li>MS SQL Sever</li>
-            <li>Mongo DB</li>
+            <li>MongoDB</li>
+            <li>CSS</li>
             <li>Html5</li>
             <li>Jquery</li>
             
